# meshio

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  codecov.yml  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py  testoutput.txt  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_format.md
.github/workflows/: build.yml  ci.yml
abaqus/: README.md  UUea.inp  abaqus_mesh_ex.inp
doc/: Makefile  cell_types.tex  conf.py  index.rst  requirements.txt
examples/: mesh_trial.inp  test_abaqus.py
logo/: logo.py
med/: README.md  box.med  cylinder.med
meshio/: __about__.py  __init__.py  _abaqus.py  _ansys.py  _cgns.py  _cli.py  _common.py  _dolfin.py  _exodus.py  _files.py  _filetypes.py  _flac3d.py  _h5m.py  _helpers.py  _mdpa.py  _med.py  _medit.py  _mesh.py  _nastran.py  _neuroglancer.py  _obj.py  _off.py  _permas.py  _plot3d.py  _ply.py  _stl.py  _svg.py  _tetgen.py  _ugrid.py  _vtk.py  _vtu.py  _wkb.py  _wkt.py  abaqus_io.py  ansys_io.py  cli.py  common.py  dolfin_io.py  exodus_io.py  gmsh_io.py  (+24 more)
meshio/_cli/: __init__.py  _ascii.py  _binary.py  _compress.py  _convert.py  _decompress.py  _helpers.py  _info.py
meshio/_cxml/: __init__.py  etree.py
meshio/_gmsh/: common.py  main.py  msh2.py  msh4_0.py  msh4_1.py
meshio/_msh/: __init__.py  common.py  msh2.py  msh4_0.py  msh4_1.py
meshio/_xdmf/: common.py  main.py  time_series.py
meshio/abaqus/: _abaqus.py
meshio/ansys/: _ansys.py
meshio/avsucd/: __init__.py  _avsucd.py
meshio/cgns/: __init__.py  _cgns.py
meshio/dolfin/: __init__.py  _dolfin.py
meshio/exodus/: _exodus.py
meshio/flac3d/: __init__.py  _flac3d.py
meshio/formats/: __init__.py  _abaqus.py  _ansys.py  _cgns.py  _dolfin.py  _exodus.py  _flac3d.py  _h5m.py  _mdpa.py  _med.py  _medit.py  _nastran.py  _neuroglancer.py  _obj.py  _off.py  _permas.py  _ply.py  _stl.py  _svg.py  _tetgen.py  _vtk.py  _vtu.py  _wkt.py
meshio/formats/_gmsh/: __init__.py  common.py  main.py  msh2.py  msh4_0.py  msh4_1.py
meshio/formats/_xdmf/: __init__.py  main.py  time_series.py
meshio/gmsh/: __init__.py  _gmsh22.py  _gmsh40.py  _gmsh41.py  common.py  main.py
meshio/h5m/: __init__.py  _h5m.py
meshio/hmf/: _hmf.py
meshio/mdpa/: __init__.py  _mdpa.py
meshio/med/: _med.py
meshio/medit/: __init__.py  _medit.py  _medit_internal.py
meshio/msh_io/: __init__.py  common.py  main.py  msh2.py  msh4.py  msh4_0.py  msh4_1.py
meshio/nastran/: _nastran.py
meshio/neuroglancer/: __init__.py  _neuroglancer.py
meshio/off/: _off.py
meshio/permas/: _permas.py
meshio/ply/: __init__.py  _ply.py
meshio/stl/: _stl.py
meshio/su2/: _su2.py
meshio/svg/: __init__.py  _svg.py
meshio/tecplot/: _tecplot.py
meshio/tetgen/: _tetgen.py
meshio/ugrid/: __init__.py  _ugrid.py
meshio/vtk/: _vtk.py
meshio/vtu/: __init__.py  _vtu.py
meshio/wkt/: _wkt.py
meshio/xdmf/: __init__.py  common.py  main.py  time_series.py
meshio/xdmf_io/: __init__.py  common.py  main.py  time_series.py
msh/: ex17-2.2.msh  ex17-4.1.msh  insulated-4.1.msh  insulated.geo
src/meshio/: __init__.py  _common.py  _exceptions.py  _helpers.py  _mesh.py  _vtk_common.py
src/meshio/_cli/: __init__.py  _ascii.py  _binary.py  _compress.py  _convert.py  _decompress.py  _helpers.py  _info.py  _main.py
src/meshio/_cxml/: __init__.py  etree.py
src/meshio/abaqus/: __init__.py  _abaqus.py
src/meshio/ansys/: __init__.py  _ansys.py
src/meshio/avsucd/: _avsucd.py
src/meshio/calculix/: __init__.py  _calculix.py
src/meshio/cgns/: _cgns.py
src/meshio/dolfin/: _dolfin.py
src/meshio/exodus/: __init__.py  _exodus.py
src/meshio/flac3d/: _flac3d.py
src/meshio/gmsh/: __init__.py  _gmsh22.py  _gmsh40.py  _gmsh41.py  common.py  main.py
src/meshio/h5m/: _h5m.py
src/meshio/hmf/: __init__.py  _hmf.py
src/meshio/mdpa/: _mdpa.py
src/meshio/med/: __init__.py  _med.py
src/meshio/medit/: _medit.py  _medit_internal.py
src/meshio/nastran/: __init__.py  _nastran.py
src/meshio/netgen/: __init__.py  _netgen.py
src/meshio/neuroglancer/: _neuroglancer.py
src/meshio/off/: __init__.py  _off.py
src/meshio/openfoam/: __init__.py  _openfoam.py
src/meshio/ovm/: __init__.py  _ovm.py  ovm_ascii.py  ovm_mesh.py
src/meshio/permas/: __init__.py  _permas.py  _permas_read.py  _permdat_line.py
src/meshio/ply/: _ply.py
src/meshio/stl/: __init__.py  _stl.py
src/meshio/su2/: __init__.py  _su2.py
src/meshio/svg/: _svg.py
test/: helpers.py  legacy_reader.py  legacy_writer.py  performance.py  size.py  test.py  test_abaqus.py  test_ansys.py  test_avsucd.py  test_cgns.py  test_cli.py  test_dolfin.py  test_exodus.py  test_flac3d.py  test_gmsh.py  test_helpers.py  test_helpers_h5.py  test_hmf.py  test_io.py  test_mdpa.py  test_med.py  test_medit.py  test_mesh.py  test_moab.py  test_nastran.py  test_neuroglancer.py  test_obj.py  test_off.py  test_permas.py  test_ply.py  test_readme.py  test_stl.py  test_su2.py  test_svg.py  test_tags.py  test_tecplot.py  test_tetgen.py  test_ugrid.py  test_vtk.py  test_vtu.py  (+4 more)
test/meshes/: cavity.vtk  naca0018_2d.p3d
tests/: helpers.py  legacy_reader.py  legacy_writer.py  performance.py  test_abaqus.py  test_ansys.py  test_avsucd.py  test_calculix.py  test_cgns.py  test_cli.py  test_dolfin.py  test_exodus.py  test_flac3d.py  test_gmsh.py  test_hmf.py  test_mdpa.py  test_med.py  test_medit.py  test_mesh.py  test_moab.py  test_nastran.py  test_netgen.py  test_neuroglancer.py  test_obj.py  test_off.py  test_openfoam.py  test_ovm.py  test_permas.py  test_ply.py  test_public.py  test_readme.py  test_stl.py  test_su2.py  test_svg.py  test_tecplot.py  test_tetgen.py  test_ugrid.py  test_unv.py  test_vtk.py  test_vtp.py  (+3 more)
tools/: meshio-convert  paraview-meshio-plugin.py
vtk/: 00_image.vtk  01_image.vtk  02_structured.vtk  03_rectilinear.vtk  04_rectilinear.vtk  05_rectilinear.vtk  rbc_001.vtk
(+105 files in other folders)
