[build-system]
requires = ["setuptools >=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meshio"
version = "5.3.4"
description = "I/O for many mesh formats"
readme = "README.md"
license = {text = "MIT"}
keywords = ["mesh", "file formats", "scientific", "engineering", "fem", "finite elements"]
authors = [
  {name = "Nico Schlömer"}, {email = "nico.schloemer@gmail.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
  "importlib_metadata; python_version<'3.8'",
  "numpy>=1.20.0",
  "rich",
]

[project.optional-dependencies]
all = [
    "netCDF4",
    "h5py",  # CGNS, H5M, MED, XDMF formats
]

[project.urls]
Code = "https://github.com/nschloe/meshio"
Issues = "https://github.com/nschloe/meshio/issues"
Funding = "https://github.com/sponsors/nschloe"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.console_scripts]
meshio = "meshio._cli:main"

[tool.isort]
profile = "black"
