[metadata]
name = meshio
version = 4.0.16
author = Nico Schlömer et al.
author_email = nico.schloemer@gmail.com
description = I/O for many mesh formats
url = https://github.com/nschloe/meshio
project_urls =
    Code=https://github.com/nschloe/meshio
    Issues=https://github.com/nschloe/meshio/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
all =
    netCDF4
    h5py  # CGNS, H5M, MED, XDMF formats

[options.entry_points]
console_scripts =
    meshio-ascii = meshio._cli:ascii
    meshio-binary = meshio._cli:binary
    meshio-compress = meshio._cli:compress
    meshio-convert = meshio._cli:convert
    meshio-decompress = meshio._cli:decompress
    meshio-info = meshio._cli:info

[options.data_files]
share/paraview-5.8/plugins =
    tools/paraview-meshio-plugin.py
