[metadata]
name = meshio
version = 5.3.4
author = Nico Schlömer et al.
author_email = nico.schloemer@gmail.com
description = I/O for many mesh formats
url = https://github.com/nschloe/meshio
project_urls =
    Code=https://github.com/nschloe/meshio
    Issues=https://github.com/nschloe/meshio/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    mesh
    file formats
    scientific
    engineering
    fem
    finite elements

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
    rich
python_requires = >=3.7

[options.packages.find]
where=src

[options.extras_require]
all =
    netCDF4
    h5py  # CGNS, H5M, MED, XDMF formats

[options.entry_points]
console_scripts =
    meshio = meshio._cli:main

[options.data_files]
share/paraview-5.9/plugins =
    tools/paraview-meshio-plugin.py
